found col-row in bootstrap

--- a/about.html
+++ b/about.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- <link type="text/css" rel="stylesheet" href="css/main.css" /> -->
-    </head>
-    <div>Hello World</div>
+			<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+			<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
 	<body>
+			<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+			<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+			<script type="text/javascript" src="js/script.js"></script>	
+		
 	</body>
+		<div >
+			<h2 class="margin1 bg-primary text-center">Hii! This is Shivam Chawla</h2>
+		</div>
+		<div class="well margin2">
+			<h1 class=" text-center">-----------------------&ltAbout Me/&gt-----------------------</h1>
+			<div class="container">
+					<div class="row">
+							<div class="col-lg-4" style="background-color:yellow;">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							</div>
+							<div class="col-lg-4">									
+								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
+										<p>Hey there, reader! I'm an under-grad student from VIT Vellore, India. I'm currently in my 3rd year of Information Technology Engineering.</p>	
+									</div>
+								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
+											<p>There are many personas to me, and here are some that co-exist peacefully -</p>	
+											<hr class="style1">
+											<p>The Web Developer "me", likes to build full-stack and responsive websites. For frontend he has learned many technologies such as html,javascript,css, bootstrap by his own, However he is truly passionate about backend and prefers nodejs. He has completed both frontend and backend certification from freecodecamp<a src="www.freecodecamp.org"/></p>
+										</div>										
+							</div>
+							<div class="col-lg-4" style="background-color:yellow;">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+								</div>
+						
+			</div>
+		
+		
+		</div>
+
 </html>
