wrote content for middle section

--- a/about.html
+++ b/about.html
@@ -28,7 +28,15 @@
 								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
 											<p>There are many personas to me, and here are some that co-exist peacefully -</p>	
 											<hr class="style1">
-											<p>The Web Developer "me", likes to build full-stack and responsive websites. For frontend he has learned many technologies such as html,javascript,css, bootstrap by his own, However he is truly passionate about backend and prefers nodejs. He has completed both frontend and backend certification from freecodecamp<a src="www.freecodecamp.org"/></p>
+											<p><span class="glyphicon glyphicon-user"></span> The Web Developer "me", likes to build full-stack and responsive websites. For front end I have learned many technologies such as html, javascript, css, bootstrap, However I am truly passionate about backend and prefers nodejs. I plan to complete both front end and backend certification from freecodecamp by may 2018. I also plan to learn reactJS and AJAX and build many web apps to solve daily problems in that process.</p>
+											<hr class="style1">
+											<p><span class="glyphicon glyphicon-wrench"></span> The Programmer / Software Developer "me", likes to build functional and useful scripts of Python. The fields of these scripts consists of Image Processing, Natural Language Processing, Machine Learning, Web Scraping, Social Media API, socket programing and what not ! Most of the scripts are open-sourced on GitHub. Most of the scripts are for doing daily tasks(such as file sharing) more efficiently.</p>
+											<hr class="style1">
+											<p><span class="glyphicon glyphicon-flag"></span> The competitive programmer "me", likes to take part in many competitive contest held over hackerrank and codechef. I have a keen interest in this field as it increases my ability to think creative solutions and solve complex problems.Furthermore it increases my knowledge of Data structures. I have planned to get atleast one gold medal in hackerrank contest by July and complete stanford coursera course. My further plans are to get CCDSAP certification.</p>
+											<hr class="style1">
+											<p><span class="glyphicon glyphicon-book"></span> The reader "me", likes to read a lot. I need daily dose of healthy reading be it books or long medium/newspaper articles or even stack-overlfow. I prefer Non-fiction thought-provoking books but lately I have read more of fiction. Some recent novels read by me are 1984 and Animal farm by George Orwell, The Tail of Two cities by Charles Dickens.</p> 
+											<hr class="style1">
+											<p><span class="glyphicon glyphicon-calendar"></span> The traveler "me", wishes to travel the world and click lots of pictures for his instagram account. I have been to many places in Tamil Nadu, Uttrakhand and Rajasthan. My last trip was of rammeshwaram, one of the 12 shivalings and my next planned trip is for the North-east India.</p>
 										</div>										
 							</div>
 							<div class="col-lg-4" style="background-color:yellow;">
