wrote content foreducation section

--- a/about.html
+++ b/about.html
@@ -17,9 +17,22 @@
 			<h1 class=" text-center">-----------------------&ltAbout Me/&gt-----------------------</h1>
 			<div class="container">
 					<div class="row">
-							<div class="col-lg-4" style="background-color:yellow;">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							<div class="col-lg-4">
+									<div class="panel panel-default" style="padding:10px 15px 10px 15px;">
+										<p class="text-justify">Shivam Chawla</p>
+										<p><span class="glyphicon glyphicon-earphone"></span> +91-7597818703</p>
+										<p><span class="glyphicon glyphicon-envelope"></span> shivamchawla60@gmail.com</p>
+										<p><span class="glyphicon glyphicon-home"></span> VIT University, Vellore| Ajmer India</p>
+									</div>
+									<div class="panel panel-primary">
+											<div class="panel-heading" >Education</div>
+											<div class="panel-body">
+													<p class="text-success">Bachelor of Technology in Infromation Technology(2015-2019).<br>Secured CGPA of 8.41 till now (5th Semester)<br>Studied in VIT University, Vellore.</p>
+													<p class="text-success">Class XII(2014)<br>Secured 93% (PHY, CHEM, MAT, CS and ENG) in CBSE Board exam.<br>Studied in Mayoor School, Ajmer.</p>
+													<p class="text-success">Class X(2012)<br>Secured 9.6 CGPA in CBSE Board exam.<br>Studied in Mayoor School, Ajmer.</p>
+												<p></p>
+											</div>
+									</div>
 							</div>
 							<div class="col-lg-4">									
 								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
@@ -37,7 +50,7 @@
 											<p><span class="glyphicon glyphicon-book"></span> The reader "me", likes to read a lot. I need daily dose of healthy reading be it books or long medium/newspaper articles or even stack-overlfow. I prefer Non-fiction thought-provoking books but lately I have read more of fiction. Some recent novels read by me are 1984 and Animal farm by George Orwell, The Tail of Two cities by Charles Dickens.</p> 
 											<hr class="style1">
 											<p><span class="glyphicon glyphicon-calendar"></span> The traveler "me", wishes to travel the world and click lots of pictures for his instagram account. I have been to many places in Tamil Nadu, Uttrakhand and Rajasthan. My last trip was of rammeshwaram, one of the 12 shivalings and my next planned trip is for the North-east India.</p>
-										</div>										
+									</div>										
 							</div>
 							<div class="col-lg-4" style="background-color:yellow;">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
