left side complete

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 	<head>
 			<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 			<link rel="stylesheet" type="text/css" href="css/main.css">
-	</head>
+			<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
+		</head>
 	<body>
 			<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 			<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
@@ -13,16 +14,22 @@
 		<div >
 			<h2 class="margin1 bg-primary text-center">Hii! This is Shivam Chawla</h2>
 		</div>
-		<div class="well margin2">
-			<h1 class=" text-center">-----------------------&ltAbout Me/&gt-----------------------</h1>
+		<div class="well margin2" >
+			<h1 style="padding:70px 0px 70px 0px;" class=" text-center" >-----------------------&ltAbout Me/&gt-----------------------</h1>
 			<div class="container">
 					<div class="row">
 							<div class="col-lg-4">
 									<div class="panel panel-default" style="padding:10px 15px 10px 15px;">
-										<p class="text-justify">Shivam Chawla</p>
+										<img src="img/1.jpg" width=100%>
+										<br><br>
+										<p class="text-justify "><b>Shivam Chawla</b> <a target="_blank" href="http://www.twitter.com/shivam_60"><i class="fa fa-twitter" style="font-size:18px"></a></i></p>
 										<p><span class="glyphicon glyphicon-earphone"></span> +91-7597818703</p>
 										<p><span class="glyphicon glyphicon-envelope"></span> shivamchawla60@gmail.com</p>
 										<p><span class="glyphicon glyphicon-home"></span> VIT University, Vellore| Ajmer India</p>
+										<div class="center">
+											<a target="_blank" href="http://www.github.com/shivam60"> <button class="btn btn-primary">GitHub</button></a>
+											<button class="btn btn-primary">Blog</button>
+										</div>
 									</div>
 									<div class="panel panel-primary">
 											<div class="panel-heading" >Education</div>
@@ -33,6 +40,17 @@
 												<p></p>
 											</div>
 									</div>
+									<div class="panel panel-primary">
+											<div class="panel-heading" >Other Activities and Achievements</div>
+											<div class="panel-body">
+													<p class="text-success">Won CISCO Bot-A-Thon for making a helper bot for VIT university.</p>
+													<p class="text-success">Public relations Developer at Assoication for Computing and Machinery.</p>
+													<p class="text-success">School Prefect at Mayoor School, Ajmer.</p>
+													<p class="text-success">School Secretary at Mayoor School, Ajmer.</p>
+												<p></p>
+											</div>
+									</div>
+
 							</div>
 							<div class="col-lg-4">									
 								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
