skills side complete

--- a/about.html
+++ b/about.html
@@ -42,16 +42,15 @@
 									</div>
 									<div class="panel panel-primary">
 											<div class="panel-heading" >Other Activities and Achievements</div>
-											<div class="panel-body">
-													<p class="text-success">Won CISCO Bot-A-Thon for making a helper bot for VIT university.</p>
-													<p class="text-success">Public relations Developer at Assoication for Computing and Machinery.</p>
-													<p class="text-success">School Prefect at Mayoor School, Ajmer.</p>
-													<p class="text-success">School Secretary at Mayoor School, Ajmer.</p>
-												<p></p>
+												<div class="panel-body">
+														<p class="text-success">Won CISCO Bot-A-Thon for making a helper bot for VIT university.</p>
+														<p class="text-success">Public relations Developer at Assoication for Computing and Machinery.</p>
+														<p class="text-success">School Prefect at Mayoor School, Ajmer.</p>
+														<p class="text-success">School Secretary at Mayoor School, Ajmer.</p>
+													<p></p>
+												</div>
 											</div>
 									</div>
-
-							</div>
 							<div class="col-lg-4">									
 								  <div class="panel panel-default" style="padding:10px 15px 10px 15px;">
 										<p>Hey there, reader! I'm an under-grad student from VIT Vellore, India. I'm currently in my 3rd year of Information Technology Engineering.</p>	
@@ -70,14 +69,68 @@
 											<p><span class="glyphicon glyphicon-calendar"></span> The traveler "me", wishes to travel the world and click lots of pictures for his instagram account. I have been to many places in Tamil Nadu, Uttrakhand and Rajasthan. My last trip was of rammeshwaram, one of the 12 shivalings and my next planned trip is for the North-east India.</p>
 									</div>										
 							</div>
-							<div class="col-lg-4" style="background-color:yellow;">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-								</div>
-						
+							<div class="col-lg-4">
+									<div class="panel panel-primary">
+											<div class="panel-heading" >Skills</div>
+												<div class="panel-body">
+													<div class="row">	
+														<div class="col-lg-2" style="padding: 5px 5px 5px 10px;">
+																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">C++</button>
+															</div>
+															<div class="col-lg-2" style="padding: 5px 5px 5px 5px;">
+																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">HTML</button>
+															</div>
+															<div class="col-lg-2" style="padding: 5px 10px 5px 15px;">
+																		<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">javascript</button>
+															</div>
+															<div class="col-lg-2" style="padding: 5px 10px 5px 50px;">
+																		<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">Python</button>
+															</div>
+															<div class="col-lg-2" style="padding: 5px 0px 5px 60px;">
+																		<button class="btn btn-primary" style="padding: 5px 5px 5px 10px;">CSS</button>
+															</div>
+													</div>
+													<div class="row">	
+														<div class="col-lg-2" style="padding: 15px 5px 5px 10px;">
+																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">bootstrap</button>
+														</div>												
+														<div class="col-lg-2" style="padding: 15px 5px 5px 35px;">
+																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">mongodb</button>
+														</div>												
+														<div class="col-lg-2" style="padding: 15px 5px 5px 60px;">
+																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">nodejs</button>
+														</div>												
+														<div class="col-lg-2" style="padding: 15px 5px 5px 65px;">
+																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">Jquery</button>
+														</div>												
+													</div>
+													<div class="row">	
+															<div class="col-lg-2" style="padding: 15px 5px 5px 10px;">
+																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">GIT</button>
+															</div>												
+															<div class="col-lg-2" style="padding: 15px 5px 5px 0px;">
+																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">opencv</button>
+															</div>												
+															<div class="col-lg-2" style="padding: 15px 5px 5px 15px;">
+																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">numpy</button>
+															</div>												
+															<div class="col-lg-2" style="padding: 15px 5px 5px 30px;">
+																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">MYSQL</button>
+															</div>												
+														<div>
+																	
+												</div>
+		
+											</div>
+									</div>
+									<div class="col-lg-4">
+											<div class="panel panel-primary">
+													<div class="panel-heading" >Cool open-source projects</div>
+														<div class="panel-body">
+															<p></p>
+														</div>
+													</div>
+											</div>									
+							</div>						
 			</div>
-		
-		
-		</div>
-
 </html>
