--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
 											<div class="panel-heading" >Other Activities and Achievements</div>
 												<div class="panel-body">
 														<p class="text-success">Won CISCO Bot-A-Thon for making a helper bot for VIT university.</p>
-														<p class="text-success">Public relations Developer at Assoication for Computing and Machinery.</p>
-														<p class="text-success">School Prefect at Mayoor School, Ajmer.</p>
-														<p class="text-success">School Secretary at Mayoor School, Ajmer.</p>
+														<p class="text-success">Public relations Developer at Assoication for Computing and Machinery.(2017-2018)</p>
+														<p class="text-success">School Prefect at Mayoor School, Ajmer.(2014-2015)</p>
+														<p class="text-success">School Secretary at Mayoor School, Ajmer.(2013-2014)</p>
 													<p></p>
 												</div>
 											</div>
