Right side done

--- a/about.html
+++ b/about.html
@@ -70,67 +70,50 @@
 									</div>										
 							</div>
 							<div class="col-lg-4">
-									<div class="panel panel-primary">
+									<div class="panel panel-primary" >
 											<div class="panel-heading" >Skills</div>
 												<div class="panel-body">
-													<div class="row">	
-														<div class="col-lg-2" style="padding: 5px 5px 5px 10px;">
-																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">C++</button>
-															</div>
-															<div class="col-lg-2" style="padding: 5px 5px 5px 5px;">
-																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">HTML</button>
-															</div>
-															<div class="col-lg-2" style="padding: 5px 10px 5px 15px;">
-																		<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">javascript</button>
-															</div>
-															<div class="col-lg-2" style="padding: 5px 10px 5px 50px;">
-																		<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">Python</button>
-															</div>
-															<div class="col-lg-2" style="padding: 5px 0px 5px 60px;">
-																		<button class="btn btn-primary" style="padding: 5px 5px 5px 10px;">CSS</button>
-															</div>
-													</div>
-													<div class="row">	
-														<div class="col-lg-2" style="padding: 15px 5px 5px 10px;">
-																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">bootstrap</button>
-														</div>												
-														<div class="col-lg-2" style="padding: 15px 5px 5px 35px;">
-																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">mongodb</button>
-														</div>												
-														<div class="col-lg-2" style="padding: 15px 5px 5px 60px;">
-																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">nodejs</button>
-														</div>												
-														<div class="col-lg-2" style="padding: 15px 5px 5px 65px;">
-																<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">Jquery</button>
-														</div>												
-													</div>
-													<div class="row">	
-															<div class="col-lg-2" style="padding: 15px 5px 5px 10px;">
-																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">GIT</button>
-															</div>												
-															<div class="col-lg-2" style="padding: 15px 5px 5px 0px;">
-																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">opencv</button>
-															</div>												
-															<div class="col-lg-2" style="padding: 15px 5px 5px 15px;">
-																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">numpy</button>
-															</div>												
-															<div class="col-lg-2" style="padding: 15px 5px 5px 30px;">
-																	<button class="btn btn-primary" style="padding: 5px 5px 5px 5px;">MYSQL</button>
-															</div>												
-														<div>
-																	
-												</div>
-		
-											</div>
-									</div>
-									<div class="col-lg-4">
-											<div class="panel panel-primary">
+														<div class="row">	
+																<div class="btn-group" >
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">C++</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">HTML</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">javascript</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">Python</button>
+																</div>															
+														</div>
+														<div class="row">	
+																<div class="btn-group" >
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">bootstrap</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">mongodb</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">nodejs</button>
+																</div>
+														</div>
+														<div class="row">	
+																<div class="btn-group" >
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">Jquery</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">GIT</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">opencv</button>
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">numpy</button>
+																</div>
+														</div>
+														<div class="row">	
+																<div class="btn-group" >
+																		<button class="btn btn-primary" style="margin:10px 10px 0px 10px;">MYSQL</button>
+																</div>
+														</div>
+									 	  </div>
+									</div>	
+											<div class="panel panel-primary" style="padding:0px 0px 0px 0px;">
 													<div class="panel-heading" >Cool open-source projects</div>
 														<div class="panel-body">
-															<p></p>
+															<p><i class="fa fa-github" style="font-size:18px"></i><b> Networking:</b> An efficient way to share files between two nodes present on the same computer.</p>
+															<p><i class="fa fa-github" style="font-size:18px"></i><b> VIT Chat-BOT:</b> A bot to answer FAQ about VIT university built for CISCO's backend.</p>
+															<p><i class="fa fa-github" style="font-size:18px"></i><b> PDON(Distibuted Computing):</b> A script to use your friend's laptop(all the computers on the same network) to speed up your data processing.</p>
+															<p><i class="fa fa-github" style="font-size:18px"></i><b> Portable Glasses with Facial Recognition:</b> A cool pair of glasses for Law Enforcement which helps Recognition of crimanls(people present in the database).</p>
+
 														</div>
 													</div>
-											</div>									
+								
 							</div>						
 			</div>
 </html>
